--- a/community.html
+++ b/community.html
@@ -6,27 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="community.css">
 </head>
 
 <body>
     <header class="header">
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icons">
-                <img src="images/9357500_4148873 2.png" alt="" style="margin-top: -30px;">
+        <nav class="navbar">
+            <div class="logo">
+                <div class="logo-icons">
+                    <img src="images/9357500_4148873 2.png" alt="" style="margin-top: -30px;">
+                </div>
             </div>
-        </div>
-        <div class="nav-menu">
-            <a href="index.html" class="active">Home</a>
-            <a href="#">Shop</a>
-            <a href="community.html">Community</a>
-            <a href="#">Blog</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
-        <a href="login.html" class="signin-btn">Sign in</a>
-    </nav>
-</header>
+            <div class="nav-menu">
+                <a href="index.html">Home</a>
+                <a href="product.html">Product</a>
+                <a href="community.html">Community</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="cart.html" style="position: relative;">🛒</a>
+            </div>
+
+            <a href="login.html" class="signin-btn">Sign in</a>
+        </nav>
+    </header>
 
     <div class="community-hero">
         <div class="community-hero-content">
