--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,12 +16,12 @@
                 </div>
             </div>
             <div class="nav-menu">
-                <a href="#" class="active">Home</a>
-                <a href="#">Shop</a>
+                <a href="index.html">Home</a>
+                <a href="product.html">Product</a>
                 <a href="community.html">Community</a>
-                <a href="#">Blog</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <a href="cart.html" style="position: relative;">🛒</a>
             </div>
 
             <a href="login.html" class="signin-btn">Sign in</a>
@@ -31,7 +32,7 @@
         <div class="hero-content">
             <h1 class="hero-title">Modern furniture store</h1>
             <p class="hero-description">Discover the best furniture with high quality here</p>
-            <button class="shop-now-btn">Shop Now</button>
+            <a href="product.html" class="shop-now-btn">Shop Now</a>
         </div>
         <div class="hero-image">
             <div class="hero-image-frame">
@@ -87,9 +88,9 @@
         <div class="products-grid">
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img orange-chair">
+                    <a href="product.html" class="product-img orange-chair">
                         <img src="images/Rectangle 28 (1).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -105,9 +106,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img black-chair">
+                    <a href="product.html" class="product-img black-chair">
                         <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -123,9 +124,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img yellow-chair">
+                    <a href="product.html" class="product-img yellow-chair">
                         <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -141,9 +142,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img orange-chair-2">
+                    <a href="product.html" class="product-img orange-chair-2">
                         <img src="images/Rectangle 28 (1).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -159,9 +160,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img dining-set">
-                        <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    <a href="product.html" class="product-img orange-chair">
+                        <img src="images/Rectangle 28 (1).png" alt="">
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -177,9 +178,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img dining-set">
+                    <a href="product.html" class="product-img orange-chair">
                         <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -195,9 +196,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img dining-set">
+                    <a href="product.html" class="product-img orange-chair">
                         <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -213,9 +214,9 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <div class="product-img dining-set">
+                    <a href="product.html" class="product-img orange-chair">
                         <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
+                    </a>
                     <span class="heart-icon">❤️</span>
                 </div>
                 <h3 class="product-name">Orange Chair</h3>
@@ -240,7 +241,7 @@
                 <div class="offer-content">
                     <h3 class="offer-title">White Comfortable Chair</h3>
                     <div class="offer-price">$429.00</div>
-                    <button class="buy-now-btn">Buy Now</button>
+                    <a href="product.html" class="buy-now-btn">Buy Now</a>
                 </div>
                 <div class="offer-image">
                     <div class="white-chair">
@@ -253,7 +254,7 @@
                 <div class="offer-content">
                     <h3 class="offer-title">White Comfortable Chair</h3>
                     <div class="offer-price">$429.00</div>
-                    <button class="buy-now-btn">Buy Now</button>
+                    <a href="product.html" class="buy-now-btn">Buy Now</a>
                 </div>
                 <div class="offer-image">
                     <div class="white-chair">
@@ -265,83 +266,6 @@
         </div>
     </div>
 
-    <div class="additional-products">
-        <div class="products-grid">
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-img dining-set">
-                        <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
-                    <span class="heart-icon">❤️</span>
-                </div>
-                <h3 class="product-name">Orange Chair</h3>
-                <div class="product-price">
-                    <span class="current-price">$500.00</span>
-                    <span class="old-price">$600.00</span>
-                </div>
-                <div class="product-rating">
-                    <span class="star">⭐</span>
-                    <span class="rating">4.6</span>
-                    <span class="reviews">(200)</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-img dining-set">
-                        <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
-                    <span class="heart-icon">❤️</span>
-                </div>
-                <h3 class="product-name">Orange Chair</h3>
-                <div class="product-price">
-                    <span class="current-price">$500.00</span>
-                    <span class="old-price">$600.00</span>
-                </div>
-                <div class="product-rating">
-                    <span class="star">⭐</span>
-                    <span class="rating">4.6</span>
-                    <span class="reviews">(200)</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-img dining-set">
-                        <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
-                    <span class="heart-icon">❤️</span>
-                </div>
-                <h3 class="product-name">Orange Chair</h3>
-                <div class="product-price">
-                    <span class="current-price">$500.00</span>
-                    <span class="old-price">$600.00</span>
-                </div>
-                <div class="product-rating">
-                    <span class="star">⭐</span>
-                    <span class="rating">4.6</span>
-                    <span class="reviews">(200)</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <div class="product-img dining-set">
-                        <img src="images/Rectangle 28 (2).png" alt="">
-                    </div>
-                    <span class="heart-icon">❤️</span>
-                </div>
-                <h3 class="product-name">Orange Chair</h3>
-                <div class="product-price">
-                    <span class="current-price">$500.00</span>
-                    <span class="old-price">$600.00</span>
-                </div>
-                <div class="product-rating">
-                    <span class="star">⭐</span>
-                    <span class="rating">4.6</span>
-                    <span class="reviews">(200)</span>
-                </div>
-            </div>
-
-        </div>
-    </div>
 
     <div class="services">
         <h2 class="services-title">Services</h2>
