--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture Store</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -18,11 +19,11 @@
             </div>
             <div class="nav-menu">
                 <a href="index.html">Home</a>
-                <a href="#">Shop</a>
+                <a href="product.html">Product</a>
                 <a href="community.html">Community</a>
-                <a href="#">Blog</a>
-                <a href="about.html" class="active">About</a>
+                <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <a href="cart.html" style="position: relative;">🛒</a>
             </div>
 
             <a href="login.html" class="signin-btn">Sign in</a>
