--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
@@ -30,73 +30,46 @@
         </nav>
     </header>
 
-    <div class="contact-hero">
-        <div class="contact-hero-content">
-            <h1 class="contact-hero-title">Contact Us</h1>
-            <div class="breadcrumb">
-                <span style="color: black;">Home > </span>
-                <span>Contact Us</span>
-            </div>
-        </div>
-    </div>
+    <div class="login-container">
+        <div class="login-wrapper">
+            <h1 class="login-title">Welcome Back</h1>
+            <p class="login-subtitle">Please enter your details to sign in</p>
 
-    <div class="contact-info-section">
-        <div class="contact-info-container">
-            <div class="contact-info-card">
-                <div class="contact-icon-circle">
-                    <span class="contact-icon"><img src="images/Group 71 (1).png" alt=""></span>
+            <form class="login-form">
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
                 </div>
-                <div class="contact-info-text">01150309147</div>
-            </div>
-            <div class="contact-info-card">
-                <div class="contact-icon-circle">
-                    <span class="contact-icon"><img src="images/Group 91 (1).png" alt=""></span>
-                </div>
-                <div class="contact-info-text">mohammedmohey67@gmail.com</div>
-            </div>
-            <div class="contact-info-card">
-                <div class="contact-icon-circle">
-                    <span class="contact-icon"><img src="images/Group 35 (1).png" alt=""></span>
-                </div>
-                <div class="contact-info-text">Qena</div>
-            </div>
-        </div>
-    </div>
 
-    <div class="contact-form-section">
-        <div class="contact-form-container">
-            <div class="contact-form-image">
-                <div class="form-image-wrapper">
-                    <img src="images/r.png" alt="Modern living room">
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter your password" required>
                 </div>
-            </div>
-            <div class="contact-form-wrapper">
-                <form class="contact-form">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="firstName">First Name*</label>
-                            <input type="text" id="firstName" name="firstName" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="lastName">Last Name*</label>
-                            <input type="text" id="lastName" name="lastName" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email*</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone*</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Your Message*</label>
-                        <textarea id="message" name="message" rows="6" required></textarea>
-                    </div>
-                    <button type="submit" class="send-message-btn">Send Message</button>
-                </form>
-            </div>
+
+                <div class="form-options">
+                    <label class="checkbox-container">
+                        <input type="checkbox"> Remember me
+                    </label>
+                    <a href="#" class="forgot-password">Forgot Password?</a>
+                </div>
+
+                <button type="submit" class="login-submit-btn">Sign in</button>
+
+                <div class="divider">
+                    <span>or continue with</span>
+                </div>
+
+                <button type="button" class="google-btn">
+                    Sign in with Google
+                </button>
+
+                <p class="signup-link">
+                    Don't have an account? <a href="#">Sign up</a>
+                </p>
+            </form>
+        </div>
+        <div class="login-image">
+            <img src="images/login-side.png" alt="Login Side Image">
         </div>
     </div>
 
@@ -177,4 +150,3 @@
 </body>
 
 </html>
-
